# yuukips-launcher

./: BUILD.md  DEVELOPMENT.md  README.md  build-verbose.bat  build-verbose.ps1  build.ps1  build.sh  index.html  package-lock.json  package.json  sync-version.cjs  vite.config.ts
.github/workflows/: build.yml
.plan/: downloader.md  game-list.md  game-patch.md  proxy-game.md  update.md
.trae/rules/: project_rules.md
.vercel/: project.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  yuukips-launcher.exe.manifest
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: download.rs  game.rs  hoyoplay.rs  http.rs  lib.rs  main.rs  patch.rs  proxy.rs  settings.rs  system.rs  utils.rs
src/components/: DebugSettingsModal.tsx  DiskScanModal.tsx  DownloadIndicator.tsx  DownloadManager.tsx  EngineSelectionModal.tsx  ErrorBoundary.tsx  GameCard.tsx  GameDetails.tsx  GameSettingsModal.tsx  Header.tsx  Md5ProgressInline.tsx  NewsPanel.tsx  NewsSection.tsx  PatchErrorModal.tsx  PatchMessageModal.tsx  ProxyMessageModal.tsx  ProxyTestModal.tsx  SSLCertificateModal.tsx  Sidebar.tsx  SocialLinks.tsx  SocialPanel.tsx  UpdateErrorModal.tsx  UpdateFailureModal.tsx  UpdateModal.tsx  WindowControls.tsx
src/contexts/: DownloadSettingsContext.tsx  downloadSettingsContext.ts
src/data/: games.ts  news.ts  socialLinks.ts
src/hooks/: useDownloadSettingsContext.ts  useDownloadStatus.ts
src/services/: downloadService.ts  gameApi.ts  settingsService.ts  updateService.ts
src/types/: index.ts  tauri.d.ts
