[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }



[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
hudsucker = { version = "0.21", features = ["rcgen-ca", "rustls-client"], default-features = false }
winreg = "0.52"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
hyper-rustls = "0.24"
rcgen = "0.13"
time = "0.3"
once_cell = "1.19"
rustls-pemfile = "1.0"
registry = "1.2"
chrono = { version = "0.4", features = ["serde"] }
scopeguard = "1.2"
md5 = "0.7"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt", "handleapi"] }
