[package]
name = "yuukips-launcher"
version = "2.0.8"
description = "A launcher for YuukiPS"
authors = ["yuuki"]
license = "MIT"
repository = "https://github.com/YuukiPS/yuukips-launcher"
edition = "2021"
rust-version = "1.77.2"

[features]
default = ["devtools"]
devtools = ["tauri/devtools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "native-tls", "rustls-tls"] }
futures-util = "0.3"

regex = "1.0"
hudsucker = { version = "0.21", features = ["rcgen-ca", "rustls-client"], default-features = false }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
hyper-rustls = "0.24"
rcgen = "0.13"
time = "0.3"
once_cell = "1.19"
rustls-pemfile = "1.0"
chrono = { version = "0.4", features = ["serde"] }
scopeguard = "1.2"
md5 = "0.7"
uuid = { version = "1.0", features = ["v4", "serde"] }
dirs = "5.0"
url = "2.0"
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "securitybaseapi", "winnt", "handleapi", "shellapi", "synchapi", "winbase"] }
winreg = "0.52"
registry = "1.2"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

# Profile configurations optimized for development speed
[profile.dev]
opt-level = 0          # No optimization for faster builds
debug = true           # Keep debug info
lto = false            # Disable LTO for dev builds
codegen-units = 16     # Use multiple cores for compilation
incremental = true     # Enable incremental compilation
panic = "unwind"       # Faster than abort for dev

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

# Linting configuration for code quality
[lints.rust]
unused_imports = "warn"
unused_variables = "warn"
dead_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
ptr_arg = "deny"
let_unit_value = "deny"
unused_self = "warn"
redundant_clone = "warn"
